# LeetCode

./: .gitignore  test.cpp
cpp/: Makefile  func.h  main.cpp
cpp/lib/: 1008.ConstructBinarySearchTreeFromPreorderTraversal.cpp  1008.ConstructBinarySearchTreeFromPreorderTraversal.h  1277.CountSquareSubmatricesWithAllOnes.cpp  1277.CountSquareSubmatricesWithAllOnes.h  207.CourseSchedule.cpp  207.CourseSchedule.h  240.SearchA2DMatrixII.hpp  329.LongestIncreasingPathInAMatrix.cpp  329.LongestIncreasingPathInAMatrix.h  468.ValidateIPAddress.cpp  468.ValidateIPAddress.h  513.FindBottomLeftTreeValue.cpp  513.FindBottomLeftTreeValue.h  515.FindLargestValueInEachTreeRow.cpp  515.FindLargestValueInEachTreeRow.h  518.CoinChange2.cpp  518.CoinChange2.h  785.IsGraphBipartite.cpp  785.IsGraphBipartite.h  886.PossibleBipartition.cpp  886.PossibleBipartition.h  986.IntervalListIntersections.cpp  986.IntervalListIntersections.h  depth_first_search.cpp  depth_first_search.h  dynamic_programming.cpp  dynamic_programming.h
csharp/: CMakeLists.txt  Makefile  csharp.sln  main.cs
csharp/Lib/: 1192.CriticalConnectionsInANetwork.cs  1277.CountSquareSubmatriceswithAllOnes.cs  210.CourseScheduleII.cs  313.SuperUglyNumber.cs  329.LongestIncreasingPathInAMatrix.cs  525.ContiguousArray.cs  638.ShoppingOffers.cs  72.EditDistance.cs  886.PossibleBipartition.cs  Codility.BigNumberProblem.cs  Codility.Bulbs.cs  Codility.DemoTask.cs  Codility.GambleProblem.cs  Codility.WoodStick.cs  Codolity.SortDistinctValueProblem.cs  EditDistance.cs  LeetCode240SearchA2DMatrixII.cs  MathExtensions.cs  Utilities.cs
csharp/csharp/: Program.cs  csharp.csproj
csharp/csharp/Lib/: 106.ConstructBinaryTreeFromInorderAndPostorderTraversal.cs  146.LRUCache.cs  207.CourseSchedule.cs  240.SearchA2DMatrixII.cs  279.PerfectSquares.cs  313.SuperUglyNumber.cs  468.ValidateIPAddress.cs  5.LongestPalindromicSubstring.cs  525.ContiguousArray.cs  56.MergeIntervals.cs  72.EditDistance.cs  787.CheapestFlightsWithinKStops.cs  983.MinimumCostForTickets.cs  986.IntervalListIntersections.cs
csharp/csharp/Tests/: 240.SearchA2DMatrixIITest.cs  LeetCode_486_ValidateIPAddress.cs  LeetCode_72_EditDistance.cs
csharp/src/: 1008_ConstructBinarySearchTreeFromPreorderTraversal.cs  101_SymmetricTree.cs  105_ConstructBinaryTreeFromPreorderAndInorderTraversal.cs  106_ConstructBinaryTreeFromInorderAndPostorderTraversal.cs  1192_CriticalConnectionsInANetwork.cs  1277_CountSquareSubmatriceswithAllOnes.cs  141_LinkedListCycle.cs  146_LRUCache.cs  155_MinStack.cs  1905_CountSubIslands.cs  1_TwoSum.cs  200_NumberOfIslands.cs  207_CourseSchedule.cs  20_ValidParentheses.cs  210_CourseScheduleII.cs  22_GenerateParentheses.cs  240_SearchA2DMatrixII.cs  264_UglyNumberII.cs  279_PerfectSquares.cs  283_MoveZeroes.cs  313_SuperUglyNumber.cs  329_LongestIncreasingPathInAMatrix.cs  448_FindAllNumbersDisappearedInAnArray.cs  45_JumpGameII.cs  468_ValidateIPAddress.cs  513_FindBottomLeftTreeValue.cs  515_FindLargestValueInEachTreeRow.cs  518_CoinChange2.cs  525_ContiguousArray.cs  55_JumpGame.cs  56_MergeIntervals.cs  5_LongestPalindromicSubstring.cs  638_ShoppingOffers.cs  72_EditDistance.cs  785_IsGraphBipartite.cs  787_CheapestFlightsWithinKStops.cs  827_MakingALargeIsland.cs  886_PossibleBipartition.cs  983_MinimumCostForTickets.cs  986_IntervalListIntersections.cs  (+3 more)
golang/: main.go
golang/libs/: TwoSum.go
java/: BreadthFirstSearch.java  DepthFirstSearch.java  Main.java  Makefile  TreeNode.java
kotlin/: Makefile  main.kt
kotlin/Lib/: 105.ConstructBinaryTreeFromPreorderAndInorderTraversal.kt  146.LRUCache.kt  210.CourseScheduleII.kt  240.SearchA2DMatrixII.kt  264.UglyNumberII.kt  313.SuperUglyNumber.kt  5.LongestPalindromicSubstring.kt  56.MergeIntervals.kt  787.CheapestFlightsWithinKStops.kt  983.MinimumCostForTickets.kt  CoinChange.kt  CoinChange2.kt  ContiguousArray.kt  CountSquareSubmatriceswithAllOnes.kt  CountingBits.kt  CourseSchedule.kt  EditDistance.kt  H-Index_II.kt  IntervalListIntersections.kt  InvertBinaryTree.kt  KClosestPointsToOrigin.kt  MaximumDepthBinaryTree.kt  PossibleBipartition.kt  TreeNode.kt  UncrossedLines.kt  UnitTest.kt  ValidateBinarySearchTree.kt  ValidateIPAddress.kt
python/: 240.SearchA2DMatrixII.py  468.ValidateIPAddress.py  5.LongestPalindromicSubstring.py  518.CoinChange2.py  72.EditDistance.py  886.PossibleBipartition.py  983.MinimumCostForTickets.py  Makefile  bfs.py  dfs.py  main.py
rust/src/: LeetCode.rs  leet_code.rs  main.rs
rust/src/LeetCode/: problem_1_two_sum.rs
rust/src/leet_code/: problem_1.rs  problem_1008.rs  problem_105.rs  problem_106.rs  problem_1192.rs  problem_1277.rs  problem_146.rs  problem_1971.rs  problem_207.rs  problem_210.rs  problem_2359.rs  problem_240.rs  problem_264.rs  problem_279.rs  problem_313.rs  problem_329.rs  problem_468.rs  problem_5.rs  problem_513.rs  problem_515.rs  problem_518.rs  problem_525.rs  problem_56.rs  problem_638.rs  problem_67.rs  problem_72.rs  problem_785.rs  problem_787.rs  problem_827.rs  problem_875.rs  problem_886.rs  problem_909.rs  problem_931.rs  problem_983.rs  problem_986.rs
