add_library(329_LongestIncreasingPathInAMatrix SHARED 329_LongestIncreasingPathInAMatrix.cs)
add_library(72_EditDistance SHARED 72_EditDistance.cs)
add_library(1008_ConstructBinarySearchTreeFromPreorderTraversal SHARED 1008_ConstructBinarySearchTreeFromPreorderTraversal.cs)
add_library(785_IsGraphBipartite SHARED 785_IsGraphBipartite.cs)
add_library(518_CoinChange2 SHARED 518_CoinChange2.cs)
add_library(886_PossibleBipartition SHARED 886_PossibleBipartition.cs)
add_library(1277_CountSquareSubmatriceswithAllOnes SHARED 1277_CountSquareSubmatriceswithAllOnes.cs)
add_library(515_FindLargestValueInEachTreeRow SHARED 515_FindLargestValueInEachTreeRow.cs)
add_library(106_ConstructBinaryTreeFromInorderAndPostorderTraversal SHARED 106_ConstructBinaryTreeFromInorderAndPostorderTraversal.cs)
add_library(827_MakingALargeIsland SHARED 827_MakingALargeIsland.cs)
