add_library(329_LongestIncreasingPathInAMatrix SHARED 329_LongestIncreasingPathInAMatrix.cs)
add_library(72_EditDistance SHARED 72_EditDistance.cs)
add_library(1008_ConstructBinarySearchTreeFromPreorderTraversal SHARED 1008_ConstructBinarySearchTreeFromPreorderTraversal.cs)
add_library(785_IsGraphBipartite SHARED 785_IsGraphBipartite.cs)
add_library(518_CoinChange2 SHARED 518_CoinChange2.cs)
add_library(886_PossibleBipartition SHARED 886_PossibleBipartition.cs)
add_library(1277_CountSquareSubmatriceswithAllOnes SHARED 1277_CountSquareSubmatriceswithAllOnes.cs)
add_library(515_FindLargestValueInEachTreeRow SHARED 515_FindLargestValueInEachTreeRow.cs)
add_library(106_ConstructBinaryTreeFromInorderAndPostorderTraversal SHARED 106_ConstructBinaryTreeFromInorderAndPostorderTraversal.cs)
add_library(827_MakingALargeIsland SHARED 827_MakingALargeIsland.cs)
add_library(1_TwoSum SHARED 1_TwoSum.cs)
add_library(638_ShoppingOffers SHARED 638_ShoppingOffers.cs)
add_library(1192_CriticalConnectionsInANetwork SHARED 1192_CriticalConnectionsInANetwork.cs)

add_library(20_ValidParentheses SHARED 20_ValidParentheses.cs)
set_target_properties(20_ValidParentheses PROPERTIES VS_DOTNET_REFERENCES "System")

add_library(22_GenerateParentheses SHARED 22_GenerateParentheses.cs)

add_library(468_ValidateIPAddress SHARED 468_ValidateIPAddress.cs)

add_library(983_MinimumCostForTickets SHARED 983_MinimumCostForTickets.cs)