add_library(329_LongestIncreasingPathInAMatrix SHARED 329_LongestIncreasingPathInAMatrix.cs)
add_library(72_EditDistance SHARED 72_EditDistance.cs)
add_library(1008_ConstructBinarySearchTreeFromPreorderTraversal SHARED 1008_ConstructBinarySearchTreeFromPreorderTraversal.cs)
add_library(785_IsGraphBipartite SHARED 785_IsGraphBipartite.cs)
add_library(518_CoinChange2 SHARED 518_CoinChange2.cs)
add_library(886_PossibleBipartition SHARED 886_PossibleBipartition.cs)
add_library(1277_CountSquareSubmatriceswithAllOnes SHARED 1277_CountSquareSubmatriceswithAllOnes.cs)
add_library(515_FindLargestValueInEachTreeRow SHARED 515_FindLargestValueInEachTreeRow.cs)
add_library(106_ConstructBinaryTreeFromInorderAndPostorderTraversal SHARED 106_ConstructBinaryTreeFromInorderAndPostorderTraversal.cs)
add_library(827_MakingALargeIsland SHARED 827_MakingALargeIsland.cs)
add_library(1_TwoSum SHARED 1_TwoSum.cs)
add_library(638_ShoppingOffers SHARED 638_ShoppingOffers.cs)
add_library(1192_CriticalConnectionsInANetwork SHARED 1192_CriticalConnectionsInANetwork.cs)

add_library(20_ValidParentheses SHARED 20_ValidParentheses.cs)
set_target_properties(20_ValidParentheses PROPERTIES VS_DOTNET_REFERENCES "System")

add_library(22_GenerateParentheses SHARED 22_GenerateParentheses.cs)

add_library(468_ValidateIPAddress SHARED 468_ValidateIPAddress.cs)

add_library(983_MinimumCostForTickets SHARED 983_MinimumCostForTickets.cs)

add_library(264_UglyNumberII SHARED 264_UglyNumberII.cs)

add_library(56_MergeIntervals SHARED 56_MergeIntervals.cs)

add_library(210_CourseScheduleII SHARED 210_CourseScheduleII.cs)

add_library(105_ConstructBinaryTreeFromPreorderAndInorderTraversal SHARED 105_ConstructBinaryTreeFromPreorderAndInorderTraversal.cs)

add_library(313_SuperUglyNumber SHARED 313_SuperUglyNumber.cs)

add_library(5_LongestPalindromicSubstring SHARED 5_LongestPalindromicSubstring.cs)

add_library(787_CheapestFlightsWithinKStops SHARED 787_CheapestFlightsWithinKStops.cs)

add_library(279_PerfectSquares SHARED 279_PerfectSquares.cs)

add_library(146_LRUCache SHARED 146_LRUCache.cs)

add_library(101_SymmetricTree SHARED 101_SymmetricTree.cs)

add_library(141_LinkedListCycle SHARED 141_LinkedListCycle.cs)

add_library(240_SearchA2DMatrixII SHARED 240_SearchA2DMatrixII.cs)

add_library(448_FindAllNumbersDisappearedInAnArray SHARED 448_FindAllNumbersDisappearedInAnArray.cs)

add_library(283_MoveZeroes SHARED 283_MoveZeroes.cs)
set_target_properties(283_MoveZeroes PROPERTIES VS_DOTNET_REFERENCES "System")

add_library(155_MinStack SHARED 155_MinStack.cs)
set_target_properties(155_MinStack PROPERTIES VS_DOTNET_REFERENCES "System")

add_library(55_JumpGame SHARED 55_JumpGame.cs)

add_library(45_JumpGameII SHARED 45_JumpGameII.cs)